[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://entities/world/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://entities/enemy/Turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/world/Cube.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/world/Wall.tscn" type="PackedScene" id=7]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Floor" parent="." instance=ExtResource( 3 )]

[node name="Floor2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1500, 516 )

[node name="Floor3" parent="." instance=ExtResource( 3 )]
position = Vector2( 2261, 516 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartPositionPlayer" type="Position2D" parent="."]
position = Vector2( 500, 420 )

[node name="Turret" parent="." instance=ExtResource( 5 )]
position = Vector2( 311, 213 )

[node name="Turret2" parent="." instance=ExtResource( 5 )]

[node name="Turret3" parent="." instance=ExtResource( 5 )]

[node name="Cube" parent="." instance=ExtResource( 6 )]
position = Vector2( 703, 372 )

[node name="Cube2" parent="." instance=ExtResource( 6 )]
position = Vector2( 753, 236 )

[node name="Cube3" parent="." instance=ExtResource( 6 )]
position = Vector2( 808, 372 )

[node name="Wall" parent="." instance=ExtResource( 7 )]
position = Vector2( -32, 344 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ResetTimer" to="." method="_on_Timer_timeout"]
